--- a/blogtest/src/main/resources/application.yml
+++ b/blogtest/src/main/resources/application.yml
@@ -1,6 +1,28 @@
+server:
+ port: 8000
+ servlet:
+  context-path: /blog
+  
 spring:
+ mvc:
+  view:
+   prefix: /WEB-INF/views/
+   suffix: .jsp
+   
  datasource:
-  driver-class-name: com.mysql.jdbc.Driver
+  driver-class-name: com.mysql.cj.jdbc.Driver
   url: jdbc:mysql://localhost:3306/db?serverTimezone=Asia/Seoul
   username: connectuser
   password: 123
+
+ jpa:
+  open-in-view: true
+  hibernate:
+   ddl-auto: create
+   naming:
+    physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+   use-new-id-generator-mappings: false
+  show-sql: true
+  properties:
+   hibernate.format_sql: true
+   
